# humanoid-locomotion-runtime

./: .gitignore  .gitmodules  AGENTS.md  CONTEXT.md  LICENSE  MANIFEST.md  README.md  pyproject.toml
.aris/: installed-skills-codex.txt
configs/: artifact_retention.toml  environment.lock.toml  failure_protocol.v0.toml  seed_splits.v0.toml
docs/: a800_machine_profile.md  bounded_self_improvement_extension.md  controller_checkpoint_selection.md  failure_protocol_v0.md  g1_edu_23dof_compile_smoke.md  g1_edu_23dof_controller_route.md  g1_edu_23dof_impact_audit.md  g1_edu_23dof_source_lock.md  g1_edu_23dof_training_framework.md  gate_a_foundation.md  gate_b_schema_edp.md  gate_c_option_snapshot_contract.md  glossary.md  mjlab_backend_lock.md  research_plan_prd.md  rtx5090_machine_profile.md
idea-stage/: IDEA_REPORT.md  IDEA_REPORT_20260625_110458.md  IDEA_REPORT_20260625_115846.md  IDEA_REPORT_20260626_123900.md  NOVELTY_CHECK_20260625_110458.md  NOVELTY_CHECK_20260625_115846.md  NOVELTY_CHECK_20260626_123900.md  REF_PAPER_SUMMARY_20260625_110458.md  REF_PAPER_SUMMARY_20260625_115846.md  REF_PAPER_SUMMARY_20260626_123900.md  RESEARCH_REVIEW_CLAUDE_GLM52_20260625_110458.md  RESEARCH_REVIEW_CLAUDE_GLM52_20260626_123900.md  RESEARCH_REVIEW_CLAUDE_OPUS48_20260625_115846.md
refine-logs/: A800_NIGHT_HANDOFF_MAC_SAFE_20260628.md  CITATION_AUDIT_20260628.md  DAILY_EXPERIMENT_TIMELINE.md  DAILY_EXPERIMENT_TIMELINE_20260625_121320.md  DAILY_EXPERIMENT_TIMELINE_20260626_020420.md  DAILY_EXPERIMENT_TIMELINE_20260626_022236.md  DAILY_EXPERIMENT_TIMELINE_20260626_033833.md  (+83 more)
(+155 files in other folders)
